@@ -1,45 +1,45 @@
 
 
-#include <game/server/gamecontext.h>
-#include "flag.h"
+// #include <game/server/gamecontext.h>
+// #include "flag.h"
 
-CFlag::CFlag(CGameWorld *pGameWorld, int Team)
-: CEntity(pGameWorld, CGameWorld::ENTTYPE_FLAG)
-{
-	m_Team = Team;
-	m_ProximityRadius = ms_PhysSize;
-	m_pCarryingCharacter = NULL;
-	m_GrabTick = 0;
+// CFlag::CFlag(CGameWorld *pGameWorld, int Team)
+// : CEntity(pGameWorld, CGameWorld::ENTTYPE_FLAG)
+// {
+// 	m_Team = Team;
+// 	m_ProximityRadius = ms_PhysSize;
+// 	m_pCarryingCharacter = NULL;
+// 	m_GrabTick = 0;
 
-	Reset();
-}
+// 	Reset();
+// }
 
-void CFlag::Reset()
-{
-	m_pCarryingCharacter = NULL;
-	m_AtStand = 1;
-	m_Pos = m_StandPos;
-	m_Vel = vec2(0,0);
-	m_GrabTick = 0;
-}
+// void CFlag::Reset()
+// {
+// 	m_pCarryingCharacter = NULL;
+// 	m_AtStand = 1;
+// 	m_Pos = m_StandPos;
+// 	m_Vel = vec2(0,0);
+// 	m_GrabTick = 0;
+// }
 
-void CFlag::TickPaused()
-{
-	++m_DropTick;
-	if(m_GrabTick)
-		++m_GrabTick;
-}
+// void CFlag::TickPaused()
+// {
+// 	++m_DropTick;
+// 	if(m_GrabTick)
+// 		++m_GrabTick;
+// }
 
-void CFlag::Snap(int SnappingClient)
-{
-	if(NetworkClipped(SnappingClient))
-		return;
+// void CFlag::Snap(int SnappingClient)
+// {
+// 	if(NetworkClipped(SnappingClient))
+// 		return;
 
-	CNetObj_Flag *pFlag = (CNetObj_Flag *)Server()->SnapNewItem(NETOBJTYPE_FLAG, m_Team, sizeof(CNetObj_Flag));
-	if(!pFlag)
-		return;
+// 	CNetObj_Flag *pFlag = (CNetObj_Flag *)Server()->SnapNewItem(NETOBJTYPE_FLAG, m_Team, sizeof(CNetObj_Flag));
+// 	if(!pFlag)
+// 		return;
 
-	pFlag->m_X = (int)m_Pos.x;
-	pFlag->m_Y = (int)m_Pos.y;
-	pFlag->m_Team = m_Team;
-}
+// 	pFlag->m_X = (int)m_Pos.x;
+// 	pFlag->m_Y = (int)m_Pos.y;
+// 	pFlag->m_Team = m_Team;
+// }
