@@ -1,28 +1,28 @@
 
 
-#ifndef GAME_SERVER_ENTITIES_FLAG_H
-#define GAME_SERVER_ENTITIES_FLAG_H
+// #ifndef GAME_SERVER_ENTITIES_FLAG_H
+// #define GAME_SERVER_ENTITIES_FLAG_H
 
-#include <game/server/entity.h>
+// #include <game/server/entity.h>
 
-class CFlag : public CEntity
-{
-public:
-	static const int ms_PhysSize = 14;
-	CCharacter *m_pCarryingCharacter;
-	vec2 m_Vel;
-	vec2 m_StandPos;
+// class CFlag : public CEntity
+// {
+// public:
+// 	static const int ms_PhysSize = 14;
+// 	CCharacter *m_pCarryingCharacter;
+// 	vec2 m_Vel;
+// 	vec2 m_StandPos;
 
-	int m_Team;
-	int m_AtStand;
-	int m_DropTick;
-	int m_GrabTick;
+// 	int m_Team;
+// 	int m_AtStand;
+// 	int m_DropTick;
+// 	int m_GrabTick;
 
-	CFlag(CGameWorld *pGameWorld, int Team);
+// 	CFlag(CGameWorld *pGameWorld, int Team);
 
-	virtual void Reset();
-	virtual void TickPaused();
-	virtual void Snap(int SnappingClient);
-};
+// 	virtual void Reset();
+// 	virtual void TickPaused();
+// 	virtual void Snap(int SnappingClient);
+// };
 
-#endif
+// #endif
